Correct footer on Portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -224,7 +224,7 @@
                 </address>
             </div>
             <div class="join">
-                <b class="appeal">присоединяйтесь</b>
+                <b class="footer-appeal">присоединяйтесь</b>
                 <ul class="social-list">
                     <li class="social-item">
                         <a href="" class="join-link">
@@ -256,20 +256,19 @@
                     </li>
                 </ul>
             </div>
-
             <div class="subscribe-form">
-                <b class="appeal">Подпишитесь на рассылку</b>
+                <b class="footer-appeal">Подпишитесь на рассылку</b>
                 <div class="subscribe">
-                    <input type="email" name="email" class="input-email" placeholder="E-mail">
+                    <input type="email" name="email" class="input-subscribe" placeholder="E-mail">
                     <button type="submit" class="button">
-                    Подписаться
+                        Подписаться
                         <svg class="send-icon">
-                            <use href="./images/svg/symbol-defs-2.svg#icon-send"></use>
+                            <use href="./images/svg/symbol-defs.svg#icon-send"></use>
                         </svg>
                     </button>
-                </div>      
+                </div>
             </div>
-            
+    
         </div>
     </footer>
 
